fixed a few typoes.

--- a/guides/lecture5.html
+++ b/guides/lecture5.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>
-      Lecture 5: Intro to Javascript
+      Lecture 5: Intro to JavaScript
     </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,9 @@
     <script src="/js/coder.js"></script>
   </head>
   <body>
+    <h1 class='hidden'>JavaScript Intro</h1>
     <nav class='navbar navbar-default navbar-fixed-top'>
+      <h1 class='hidden'>Main Nav</h1>
       <div class='container-fluid'>
         <div class='navbar-header'>
           <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#navbar-collapse-1' aria-expanded='false'>
@@ -65,7 +67,7 @@
            id='intro'>
         <div class='row'>
           <header class='col-sm-12 text-center'>
-            <h2>Let's make a thing... With Javascript!</h2>
+            <h2>Let's make a thing... With JavaScript!</h2>
             <h4>Written by: Aaron Niskin</h4>
           </header>
         </div>
@@ -82,7 +84,7 @@
             <h3>Prerequisites:</h3>
             <ul>
               <li>A computer to use for a bit.</li>
-              <li>Desire to learn Javascript</li>
+              <li>Desire to learn JavaScript</li>
               <li>Basic familiarity with html (lecture 1)</li>
               <li>Basic familiarity with CSS (lecture 2)</li>
               <li>Familiarity with using CSS frameworks (lecture 3)</li>
@@ -102,7 +104,7 @@
               <li>Concatinate strings</li>
               <li>Attach click handlers</li>
               <li>Prompt users for input</li>
-              <li>Edit the displayed HTML via Javascript</li>
+              <li>Edit the displayed HTML via JavaScript</li>
             </ul>
           </div>
         </div>
@@ -159,7 +161,7 @@
   &#60;body>
     &#60;nav>
       &#60;div class="nav-wrapper">
-        &#60;a href="#" class='brand-logo'>Lecture 5: Intro to Javascript&#60;/a>
+        &#60;a href="#" class='brand-logo'>Lecture 5: Intro to JavaScript&#60;/a>
       &#60;/div>
     &#60;/nav>
     &#60;div class='container'>
